--- a/package.json
+++ b/package.json
@@ -14,14 +14,11 @@
     "react-scripts": "3.4.1",
     "router": "^1.3.5"
   },
-  "homepage": "https://github.com/phuynh7577/recipe_client.git",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
